Fix typo in portfolio heading

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to my CS180/280A porlifio</h1>
+    <h1>Welcome to my CS180/280A portfolio</h1>
     <p>There are all the projects that I completed in this course.</p>
 
     <ul class="project-list">
