--- a/project0/index.html
+++ b/project0/index.html
@@ -37,13 +37,13 @@
                     <!-- The "Wrong" Way -->
                     <figure>
                         <!-- TODO: Replace this placeholder with your close-up selfie image -->
-                        <img src="https://placehold.co/600x800/d1d5db/374151?text=Close-up+Selfie" alt="A distorted close-up selfie" class="rounded-lg shadow-lg w-full">
+                        <img src="./media/image1.jpg" alt="A distorted close-up selfie" class="rounded-lg shadow-lg w-full">
                         <figcaption class="text-center mt-3 text-gray-600 italic">The "Wrong" Way: A selfie taken from very close up.</figcaption>
                     </figure>
                     <!-- The "Right" Way -->
                     <figure>
                         <!-- TODO: Replace this placeholder with your zoomed-in portrait -->
-                        <img src="https://placehold.co/600x800/d1d5db/374151?text=Zoomed-in+Portrait" alt="A more flattering portrait taken from a distance with zoom" class="rounded-lg shadow-lg w-full">
+                        <img src="./media/image3.jpg" alt="A more flattering portrait taken from a distance with zoom" class="rounded-lg shadow-lg w-full">
                         <figcaption class="text-center mt-3 text-gray-600 italic">The "Right" Way: Standing back and zooming in.</figcaption>
                     </figure>
                 </div>
