--- a/project0/index.html
+++ b/project0/index.html
@@ -34,24 +34,31 @@
             <section>
                 <h2 class="text-3xl font-bold mb-6 border-b pb-2">Part 1: Selfie: The Wrong Way vs. The Right Way</h2>
                 <div class="grid md:grid-cols-2 gap-8 items-start">
-                    <!-- The "Wrong" Way -->
+                    <!-- 13mm -->
                     <figure>
-                        <!-- TODO: Replace this placeholder with your close-up selfie image -->
                         <img src="./media/image1.jpg" alt="A distorted close-up selfie" class="rounded-lg shadow-lg w-full">
-                        <figcaption class="text-center mt-3 text-gray-600 italic">The "Wrong" Way: A selfie taken from very close up.</figcaption>
+                        <figcaption class="text-center mt-3 text-gray-600 italic">13mm</figcaption>
                     </figure>
-                    <!-- The "Right" Way -->
+                    <!-- 24mm -->
                     <figure>
-                        <!-- TODO: Replace this placeholder with your zoomed-in portrait -->
+                        <img src="./media/image2.jpg" alt="A more flattering portrait taken from a distance with zoom" class="rounded-lg shadow-lg w-full">
+                        <figcaption class="text-center mt-3 text-gray-600 italic">24mm</figcaption>
+                    </figure>
+                    <!-- 48mm -->
+                    <figure>
                         <img src="./media/image3.jpg" alt="A more flattering portrait taken from a distance with zoom" class="rounded-lg shadow-lg w-full">
-                        <figcaption class="text-center mt-3 text-gray-600 italic">The "Right" Way: Standing back and zooming in.</figcaption>
+                        <figcaption class="text-center mt-3 text-gray-600 italic">48mm</figcaption>
+                    </figure>
+                    <!-- 120mm -->
+                    <figure>
+                        <img src="./media/image4.jpg" alt="A more flattering portrait taken from a distance with zoom" class="rounded-lg shadow-lg w-full">
+                        <figcaption class="text-center mt-3 text-gray-600 italic">120mm</figcaption>
                     </figure>
                 </div>
                 <div class="mt-8 bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-2">Analysis</h3>
-                    <!-- TODO: Write your analysis here -->
                     <p class="text-gray-700 leading-relaxed">
-                        在这里写下你的分析。思考一下为什么第二张照片看起来比第一张好得多。这与透视变形 (perspective distortion) 和焦距 (focal length) 有关。当你离得非常近时（广角效果），离镜头最近的物体（比如鼻子）会显得不成比例地大。而后退并使用变焦（长焦效果）会“压缩”面部特征，使其看起来更自然、更扁平，这通常被认为是更讨人喜欢的肖像效果。
+                        This is related to perspective distortion and focal length. When you are very close to the camera, the objects nearest to the lens (like the nose) appear disproportionately large. Stepping back and using zoom (telephoto effect) "compresses" facial features, making them look more natural and flatter, which is often considered a more flattering portrait effect.
                     </p>
                 </div>
             </section>
@@ -77,8 +84,7 @@
                     <h3 class="text-xl font-semibold mb-2">Analysis</h3>
                     <!-- TODO: Write your analysis here -->
                     <p class="text-gray-700 leading-relaxed">
-                        在这里写下你的分析。思考为什么第一张照片看起来更“扁平”或“压缩”。当你使用长焦镜头从远处拍摄时，背景和前景之间的距离似乎被压缩了。远处的物体看起来比实际更大、更近。而在广角镜头下，近处的物体被夸大，远处的物体则迅速变小，创造出强烈的深度感和透视感。
-                    </p>
+                        Zoom in from a distance and the background slides right up behind your subject; far-off things swell and feel close. Go wide and the foreground balloons while the background shrinks away, giving the frame a sudden, deep breath of space.                    </p>
                 </div>
             </section>
 
