--- a/project0/index.html
+++ b/project0/index.html
@@ -33,7 +33,7 @@
             <!-- Part 1: Selfie -->
             <section>
                 <h2 class="text-3xl font-bold mb-6 border-b pb-2">Part 1: Selfie: The Wrong Way vs. The Right Way</h2>
-                <div class="grid md:grid-cols-2 gap-8 items-start">
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-4 items-start">
                     <!-- 13mm -->
                     <figure>
                         <img src="./media/image1.jpg" alt="A distorted close-up selfie" class="rounded-lg shadow-lg w-full">
@@ -94,7 +94,7 @@
                 <div class="flex justify-center">
                     <figure class="w-full md:w-3/4">
                         <!-- TODO: Replace this placeholder with your animated dolly zoom GIF -->
-                        <img src="https://placehold.co/800x450/d1d5db/374151?text=Your+Dolly+Zoom+GIF" alt="An animated GIF demonstrating the dolly zoom effect" class="rounded-lg shadow-xl w-full">
+                        <img src="./media/3.GIF" alt="An animated GIF demonstrating the dolly zoom effect" class="rounded-lg shadow-xl w-full">
                         <figcaption class="text-center mt-3 text-gray-600 italic">The Dolly Zoom, also known as the "Vertigo effect".</figcaption>
                     </figure>
                 </div>
