--- a/project0/index.html
+++ b/project0/index.html
@@ -34,11 +34,6 @@
             <section>
                 <h2 class="text-3xl font-bold mb-6 border-b pb-2">Part 1: Selfie: The Wrong Way vs. The Right Way</h2>
                 <div class="grid grid-cols-1 md:grid-cols-4 gap-4 items-start">
-                    <!-- 13mm -->
-                    <figure>
-                        <img src="./media/image1.jpg" alt="A distorted close-up selfie" class="rounded-lg shadow-lg w-full">
-                        <figcaption class="text-center mt-3 text-gray-600 italic">13mm</figcaption>
-                    </figure>
                     <!-- 24mm -->
                     <figure>
                         <img src="./media/image2.jpg" alt="A more flattering portrait taken from a distance with zoom" class="rounded-lg shadow-lg w-full">
@@ -70,13 +65,13 @@
                     <!-- Zoomed In -->
                     <figure>
                         <!-- TODO: Replace this placeholder with your zoomed-in architectural photo -->
-                        <img src="https://placehold.co/800x600/d1d5db/374151?text=Zoomed-in+from+Far+Away" alt="A street view zoomed in from a distance" class="rounded-lg shadow-lg w-full">
+                        <img src="./media/building1.jpg" alt="A street view zoomed in from a distance" class="rounded-lg shadow-lg w-full">
                         <figcaption class="text-center mt-3 text-gray-600 italic">Zoomed-in from a distance (Compressed Perspective).</figcaption>
                     </figure>
                     <!-- Walked Closer -->
                     <figure>
                         <!-- TODO: Replace this placeholder with your wide-angle photo from closer up -->
-                        <img src="https://placehold.co/800x600/d1d5db/374151?text=Wide-angle+from+Close" alt="The same street view taken from closer without zoom" class="rounded-lg shadow-lg w-full">
+                        <img src="./media/building2.jpg" alt="The same street view taken from closer without zoom" class="rounded-lg shadow-lg w-full">
                         <figcaption class="text-center mt-3 text-gray-600 italic">Wide-angle shot from a closer position.</figcaption>
                     </figure>
                 </div>
