--- a/project0/index.html
+++ b/project0/index.html
@@ -33,7 +33,7 @@
             <!-- Part 1: Selfie -->
             <section>
                 <h2 class="text-3xl font-bold mb-6 border-b pb-2">Part 1: Selfie: The Wrong Way vs. The Right Way</h2>
-                <div class="grid grid-cols-1 md:grid-cols-4 gap-4 items-start">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-start">
                     <!-- 24mm -->
                     <figure>
                         <img src="./media/image2.jpg" alt="A more flattering portrait taken from a distance with zoom" class="rounded-lg shadow-lg w-full">
@@ -53,7 +53,10 @@
                 <div class="mt-8 bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-2">Analysis</h3>
                     <p class="text-gray-700 leading-relaxed">
-                        This is related to perspective distortion and focal length. When you are very close to the camera, the objects nearest to the lens (like the nose) appear disproportionately large. Stepping back and using zoom (telephoto effect) "compresses" facial features, making them look more natural and flatter, which is often considered a more flattering portrait effect.
+                        In the 24mm wide-angle shot, the camera is extremely close. This proximity exaggerates the relative distance between facial features. The nose, being closest to the lens, appears disproportionately large, while the ears and cheeks recede, creating a distorted effect.
+                    </p>
+                    <p class="text-gray-700 leading-relaxed">
+                        For the 120mm telephoto shot, the photographer moved back and zoomed in. By increasing the physical distance, the relative depths of the facial features become negligible, minimizing distortion. The long focal length then narrows the field of view, creating perspective compression. This flattens the features into a more proportional and flattering arrangement.
                     </p>
                 </div>
             </section>
@@ -78,9 +81,11 @@
                 <div class="mt-8 bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-2">Analysis</h3>
                     <!-- TODO: Write your analysis here -->
-                    <p class="text-gray-700 leading-relaxed">
-                        Zoom in from a distance and the background slides right up behind your subject; far-off things swell and feel close. Go wide and the foreground balloons while the background shrinks away, giving the frame a sudden, deep breath of space.                    </p>
-                </div>
+                    <p class="text-gray-700 leading-relaxed">                
+                        These images of Berkeley's Campanile illustrate the powerful effect of focal length and camera position on spatial representation.
+                        The first image, taken from a distance with a long focal length, exhibits strong perspective compression. The physical space between the foreground tree and the background tower appears collapsed. This "flattening" effect minimizes the sense of depth, making the distant Campanile feel more immediate and integrated with the foreground elements.
+                        Conversely, the second image was captured from a closer position with a short focal length (wide angle). This technique exaggerates perspective, creating a pronounced sense of depth. The wide field of view and the leading lines of the road draw the viewer into the scene, emphasizing the distance to the tower and making the space feel more expansive and three-dimensional.
+                    </div>
             </section>
 
             <!-- Part 3: The Dolly Zoom -->
@@ -97,7 +102,7 @@
                     <h3 class="text-xl font-semibold mb-2">Process</h3>
                     <!-- TODO: Briefly describe your process -->
                     <p class="text-gray-700 leading-relaxed">
-                        在这里简单描述一下你的拍摄过程。例如，你选择了什么场景，拍摄了多少张照片，以及如何将它们合成为 GIF 动画的。这个效果的关键在于，当你身体（或相机）向后移动时，同时平滑地增加镜头的焦距（变焦），并始终保持主体在画面中的大小不变。这会造成一种奇特的效果：主体保持不变，但背景似乎在远离或靠近。
+                        This dolly zoom was created using a stuffed cat as the main subject, placed on a kitchen countertop against a background of blue tiles. While the main subject stays static, the background appears to warp and compress. As the focal length increases, the field of view narrows. This causes the blue tiles in the background to magnify, making each tile appear larger. Consequently, fewer tiles are visible in the frame, creating the illusion that the background is closing in on the subject.
                     </p>
                 </div>
             </section>
