--- a/project0/index.html
+++ b/project0/index.html
@@ -80,27 +80,25 @@
                 </div>
                 <div class="mt-8 bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-2">Analysis</h3>
-                    <!-- TODO: Write your analysis here -->
-                    <p class="text-gray-700 leading-relaxed">                
+                    <p class="text-gray-700 leading-relaxed">
                         These images of Berkeley's Campanile illustrate the powerful effect of focal length and camera position on spatial representation.
                         The first image, taken from a distance with a long focal length, exhibits strong perspective compression. The physical space between the foreground tree and the background tower appears collapsed. This "flattening" effect minimizes the sense of depth, making the distant Campanile feel more immediate and integrated with the foreground elements.
                         Conversely, the second image was captured from a closer position with a short focal length (wide angle). This technique exaggerates perspective, creating a pronounced sense of depth. The wide field of view and the leading lines of the road draw the viewer into the scene, emphasizing the distance to the tower and making the space feel more expansive and three-dimensional.
-                    </div>
+                    </p>
+                </div>
             </section>
 
             <!-- Part 3: The Dolly Zoom -->
             <section>
                 <h2 class="text-3xl font-bold mb-6 border-b pb-2">Part 3: The Dolly Zoom</h2>
                 <div class="flex justify-center">
-                    <figure class="w-full md:w-3/4">
-                        <!-- TODO: Replace this placeholder with your animated dolly zoom GIF -->
+                    <figure class="w-2/3 md:w-1/3">
                         <img src="./media/3.GIF" alt="An animated GIF demonstrating the dolly zoom effect" class="rounded-lg shadow-xl w-full">
                         <figcaption class="text-center mt-3 text-gray-600 italic">The Dolly Zoom, also known as the "Vertigo effect".</figcaption>
                     </figure>
                 </div>
                 <div class="mt-8 bg-white p-6 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold mb-2">Process</h3>
-                    <!-- TODO: Briefly describe your process -->
                     <p class="text-gray-700 leading-relaxed">
                         This dolly zoom was created using a stuffed cat as the main subject, placed on a kitchen countertop against a background of blue tiles. While the main subject stays static, the background appears to warp and compress. As the focal length increases, the field of view narrows. This causes the blue tiles in the background to magnify, making each tile appear larger. Consequently, fewer tiles are visible in the frame, creating the illusion that the background is closing in on the subject.
                     </p>
